--- a/cats.html
+++ b/cats.html
@@ -292,7 +292,7 @@ async function fetchRandomCatFact() {
   </main>
 
 <footer>
-  <a href="https://github.com/stam4tia" target="_blank" style="text-decoration: none; color: #333;">© 2023 Stamatia Daramboukas</a>
+  <a href="https://github.com/stam4tia" target="_blank" style="text-decoration: none; color: #333;">© 2023 Stamatia D</a>
 </footer>
   
   </body>
