--- a/cat_resources.html
+++ b/cat_resources.html
@@ -216,7 +216,7 @@ header img:hover {
 </main>
 
 <footer>
-  <a href="https://github.com/stam4tia" target="_blank" style="text-decoration: none; color: #333;">© 2023 Stamatia Daramboukas</a>
+  <a href="https://github.com/stam4tia" target="_blank" style="text-decoration: none; color: #333;">© 2023 Stamatia D</a>
 </footer>
 
 </body>
