--- a/dog_resources.html
+++ b/dog_resources.html
@@ -219,7 +219,7 @@ header img:hover {
 
 <br>
 <footer>
-  <a href="https://github.com/stam4tia" target="_blank" style="text-decoration: none; color: #333;">© 2023 Stamatia Daramboukas</a>
+  <a href="https://github.com/stam4tia" target="_blank" style="text-decoration: none; color: #333;">© 2023 Stamatia D</a>
 </footer>
 
 </body>
