--- a/dogs.html
+++ b/dogs.html
@@ -272,7 +272,7 @@ font-size: 1.5em; opacity: 0.5;">"Fetch" Random Dog Image</button>
 <main></main>
 
 <footer>
-  <a href="https://github.com/stam4tia" target="_blank" style="text-decoration: none; color: #333;">© 2023 Stamatia Daramboukas</a>
+  <a href="https://github.com/stam4tia" target="_blank" style="text-decoration: none; color: #333;">© 2023 Stamatia D</a>
 </footer>
   
 </body>
