--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ header img:hover {
 <main>
 </main>
 <footer>
-  <a href="https://github.com/stam4tia" target="_blank" style="text-decoration: none; color: #333;">© 2023 Stamatia Daramboukas</a>
+  <a href="https://github.com/stam4tia" target="_blank" style="text-decoration: none; color: #333;">© 2023 Stamatia D</a>
 </footer>
 
 
